Update .rest and swagger
