# swagger.json
@@ -1,19 +1,19 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Contacts API",
-    "description": "API to manage contacts",
+    "title": "Favorite Song API",
+    "description": "API to manage favorite songs",
     "version": "1.0.0"
   },
-  "host": "cse-341-project1-se7z.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
-    "/contacts/": {
+    "/user/": {
       "get": {
-        "description": "Get all contacts",
+        "description": "Get all users",
         "produces": [
           "application/json"
         ],
@@ -27,7 +27,7 @@
         }
       },
       "post": {
-        "description": "Create a new contact",
+        "description": "Create a new user",
         "parameters": [
           {
             "name": "body",
@@ -35,19 +35,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
+                "username": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
+                "password": {
                   "example": "any"
                 }
               }
@@ -62,14 +56,14 @@
             "description": "Precondition Failed"
           },
           "500": {
-            "description": "Failed to Create Contact"
+            "description": "Failed to Create User"
           }
         }
       }
     },
-    "/contacts/{id}": {
+    "/user/{id}": {
       "get": {
-        "description": "Get a contact by ID",
+        "description": "Get a user by ID",
         "produces": [
           "application/json"
         ],
@@ -91,7 +85,7 @@
         }
       },
       "put": {
-        "description": "Update a contact by ID",
+        "description": "Update a user by ID",
         "parameters": [
           {
             "name": "id",
@@ -105,19 +99,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
+                "username": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
+                "password": {
                   "example": "any"
                 }
               }
@@ -135,12 +123,12 @@
             "description": "Precondition Failed"
           },
           "500": {
-            "description": "Failed to Update Contact"
+            "description": "Failed to Update User"
           }
         }
       },
       "delete": {
-        "description": "Delete a contact by ID",
+        "description": "Delete a user by ID",
         "parameters": [
           {
             "name": "id",
@@ -157,7 +145,176 @@
             "description": "Bad Request"
           },
           "500": {
-            "description": "Failed to Delete Contact"
+            "description": "Failed to Delete User"
+          }
+        }
+      }
+    },
+    "/song/": {
+      "get": {
+        "description": "Get all songs",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "description": "Create a new song",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "artist": {
+                  "example": "any"
+                },
+                "album": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "duration": {
+                  "example": "any"
+                },
+                "featured": {
+                  "example": "any"
+                },
+                "songwriters": {
+                  "example": "any"
+                },
+                "composers": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Failed to Create Song"
+          }
+        }
+      }
+    },
+    "/song/{id}": {
+      "get": {
+        "description": "Get a song by ID",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "description": "Update a song by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "artist": {
+                  "example": "any"
+                },
+                "album": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "duration": {
+                  "example": "any"
+                },
+                "featured": {
+                  "example": "any"
+                },
+                "songwriters": {
+                  "example": "any"
+                },
+                "composers": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Failed to Update Song"
+          }
+        }
+      },
+      "delete": {
+        "description": "Delete a song by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Failed to Delete Song"
           }
         }
       }
